# grid

./: .dockerignore  .gitignore  Dockerfile  build-test.sh  build.sh  crazy_panel2.json  depl-sw-l2.yaml  depl-sw-w.yaml  depl.yaml  depl_f.yaml  depl_ne_l2.yaml  depl_ne_w.yaml  main.py  pyproject.toml  redis_proto.c  redis_proto.py  static_client.py  svc-sw-w.yaml  svc.yaml  table.csv  test-props.http  updater.py  upload_static.sh
.mmcache/: colors.json  colors.pkl
src/: __init__.py  cxm_props.py  initial.py  pairs.py  parts.py  project_map.py  props.py  root_group.py  walls.py
src/gsh/: __init__.py
src/preprocess/: migrations.py  settings.py  static_builds.py  sveta_json.py
src/state/: __init__.py
src/tests/: cases.json  stress_test.py
swdata/: SW2_triangles.json  SW_L2_formatted.json  SW_centers.json  SW_names.json  pair_contours_mesh.json  ptsw.3dm.rhl  tool-no-holes.gh  tool2.gh  unnamed.gh
swdata/latest/: OLD_SW_L2.json  SW_L2.json  buff.json  data.json
swdata/masks/: blobby.json  cut.json  default-2.json  default-4.json
